<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OmniCon v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter msg</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_image_1">Title slike 1</string>
    <string name="button_sendToBluetooth">Bluetooth</string>
    <string name="manual_test">Manual test</string>
    <string name="menu_manual">Manual control</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_drive">Drive</string>
    <string name="menu_help">Help</string>
    <string name="menu_bt_settings">Bluetooth settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_splosno">Manual control</string>
    <string name="title_activity_avto">Car</string>
    <string name="title_activity_tank">Tank</string>
    <string name="title_activity_manual_test">Manual test</string>
    <string name="title_activity_drive_screen">Drive</string>
    <string name="title_activity_manual_test2">ManualTest2Activity</string>
    <string name="title_activity_manual_test3">ManualTest3Activity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- preferences activity screen -->
    <string name="label_bt_device_name">Bluetooth Device name</string>
    <string name="label_device_uuid">Device UUID</string>
    <string name="label_command_start_char">Command start char</string>
    <string name="label_command_end_char">Command end char</string>
    <string name="label_servo_1_orientation">Servo motor 1 orientation</string>
    <string name="label_servo_2_orientation">Servo motor 2 orientation</string>

    <!-- default settings values -->
    <string name="value_bt_default_device_name">HC-05</string>
    <string name="value_default_command_start_char">~</string>
    <string name="value_default_command_end_char">#</string>
    <string name="value_default_device_uuid">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="value_default_servo_1_orientation">0</string>
    <string name="value_default_servo_2_orientation">0</string>

</resources>
