<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General" >

        <EditTextPreference
            android:key="device_name"
            android:title="@string/label_bt_device_name"
            android:summary="@string/value_bt_default_device_name"
            android:defaultValue="@string/value_bt_default_device_name"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="device_uuid"
            android:title="@string/label_device_uuid"
            android:summary="@string/value_default_device_uuid"
            android:defaultValue="@string/value_default_device_uuid"
            android:selectAllOnFocus="true"
            android:inputType="none"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Commands" >

        <EditTextPreference
            android:key="command_start_char"
            android:title="@string/label_command_start_char"
            android:summary="@string/value_default_command_start_char"
            android:defaultValue="@string/value_default_command_start_char"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="command_end_char"
            android:title="@string/label_command_end_char"
            android:summary="@string/value_default_command_end_char"
            android:defaultValue="@string/value_default_command_end_char"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:capitalize="none"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Servo motors" >

        <ListPreference
            android:title="@string/label_servo_1_orientation"
            android:summary="Choose turning direction of Servo motor 1"
            android:key="servo_orientation_1"
            android:defaultValue="@string/value_default_servo_1_orientation"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values" />

        <ListPreference
            android:title="@string/label_servo_2_orientation"
            android:summary="Choose turning direction of Servo motor 2"
            android:key="servo_orientation_2"
            android:defaultValue="@string/value_default_servo_2_orientation"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values" />

    </PreferenceCategory>

</PreferenceScreen>