<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.bd.bluemotor.BaseActivity">

    <item
        android:id="@+id/menu_bt_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_bt_settings"/>

    <!--  developer -->
    <item
        android:id="@+id/menu_manual"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_manual"
        />
    <!--  developer -->

    <item
        android:id="@+id/menu_preferences"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/menu_about"
        />

    <item
        android:id="@+id/menu_help"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>
